Alignment fix for recent article

--- a/less/design.less
+++ b/less/design.less
@@ -108,8 +108,8 @@ ul {
 
 p {
   margin-bottom: 1em;
-  font-size: 1.1em;
-  color: @grey;
+  font-size: 1.15em;
+  color: @mediumgrey;
   a {
     color: #000;
     border-bottom: 1px solid #000;
